--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
+        "type-check": "tsc --noEmit",
         "test": "jest",
         "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
+        "test:coverage": "jest --coverage --coverageReporters=text-lcov --coverageReporters=json-summary",
         "test:e2e": "playwright test",
         "test:e2e:ui": "playwright test --ui",
-        "test:all": "npm run test && npm run test:e2e"
+        "test:all": "npm run lint && npm run type-check && npm run test && npm run test:e2e"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.9.0",
