--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,58 +1,58 @@
 name: 🚀 Deploy to Production
 
 on:
-  push:
-    branches: [ main ]
-  workflow_run:
-    workflows: ["🚀 CI/CD Pipeline"]
-    branches: [ main ]
-    types: [ completed ]
+    push:
+        branches: [main]
+    workflow_run:
+        workflows: ["🚀 CI/CD Pipeline"]
+        branches: [main]
+        types: [completed]
 
 jobs:
-  deploy:
-    name: 🚀 Deploy to Vercel
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' }}
-    
-    environment:
-      name: production
-      url: ${{ steps.deploy.outputs.url }}
-    
-    steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
-        
-      - name: 📦 Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-          
-      - name: 📥 Install dependencies
-        run: npm ci
-        
-      - name: 🏗️ Build application
-        run: npm run build
-        
-      - name: 🚀 Deploy to Vercel
-        id: deploy
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.ORG_ID }}
-          vercel-project-id: ${{ secrets.PROJECT_ID }}
-          vercel-args: '--prod'
-          
-      - name: 📋 Deployment Summary
-        run: |
-          echo "## 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
-          echo "**Environment:** Production" >> $GITHUB_STEP_SUMMARY
-          echo "**URL:** ${{ steps.deploy.outputs.url }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Status:** ✅ Deployed successfully" >> $GITHUB_STEP_SUMMARY
-          echo "**Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
-          
-      - name: 🔔 Notify deployment
-        if: success()
-        run: |
-          echo "🎉 TailwindTrainer deployed successfully to production!"
-          echo "🌐 Live at: ${{ steps.deploy.outputs.url }}"
+    deploy:
+        name: 🚀 Deploy to Vercel
+        runs-on: ubuntu-latest
+        if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' }}
+
+        environment:
+            name: production
+            url: ${{ steps.deploy.outputs.url }}
+
+        steps:
+            - name: 📥 Checkout code
+              uses: actions/checkout@v4
+
+            - name: 📦 Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "18"
+                  cache: "npm"
+
+            - name: 📥 Install dependencies
+              run: npm ci
+
+            - name: 🏗️ Build application
+              run: npm run build
+
+            - name: 🚀 Deploy to Vercel
+              id: deploy
+              uses: amondnet/vercel-action@v25
+              with:
+                  vercel-token: ${{ secrets.VERCEL_TOKEN }}
+                  vercel-org-id: ${{ secrets.ORG_ID }}
+                  vercel-project-id: ${{ secrets.PROJECT_ID }}
+                  vercel-args: "--prod"
+
+            - name: 📋 Deployment Summary
+              run: |
+                  echo "## 🚀 Deployment Summary" >> $GITHUB_STEP_SUMMARY
+                  echo "**Environment:** Production" >> $GITHUB_STEP_SUMMARY
+                  echo "**URL:** ${{ steps.deploy.outputs.url }}" >> $GITHUB_STEP_SUMMARY
+                  echo "**Status:** ✅ Deployed successfully" >> $GITHUB_STEP_SUMMARY
+                  echo "**Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
+
+            - name: 🔔 Notify deployment
+              if: success()
+              run: |
+                  echo "🎉 TailwindTrainer deployed successfully to production!"
+                  echo "🌐 Live at: ${{ steps.deploy.outputs.url }}"
